--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,5 +16,5 @@
     "cors": "^2.8.5",
     "express": "^4.21.1"
   },
-  "hompage": "https://juljulien.github.io/carlosjgarzaPW-web/"
+  "homepage": "https://juljulien.github.io/carlosjgarzaPW/"
 }
