--- a/package.json
+++ b/package.json
@@ -1,5 +1,24 @@
 {
-  "devDependencies": {
+  "homepage": "https//juljulien.github.io/carlosjgarzaPW",
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",  
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "dependencies": {
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
     "gh-pages": "^6.2.0"
-  }
+  },
+  "homepage": "https://juljulien.github.io/carlosjgarzaPW/"
 }
